--- a/assets/styles/welcome-page-style.css
+++ b/assets/styles/welcome-page-style.css
@@ -94,7 +94,7 @@ p{
 	.grand-title, h1{
 		font-size: 2.5rem;
 	}
-	p{
+	p, .description{
 		font-size: 22px;
 	}
 	.navbar-on-the-left{
@@ -108,14 +108,46 @@ p{
 		top:35%; 
 		width: 50%;
 	}
+	.title{
+		font-size: 35px;
+	}
 
 
 }
- 	@media all and (max-width: 550px){
+ 	@media all and (max-width: 700px){
  	.title{
- 		font-size: 45px;
+ 		font-size: 26px;
  	}
  	.button{
- 		font-size: 8px;
- 	}	
+ 		font-size: 13px;
+ 	}
+ 	.description{
+ 		font-size: 22px;
+ 	}
+	
  }
+ @media all and (max-width: 570px){
+	.button{
+ 		font-size: 12px;
+ 	}
+ 	.title{
+ 		font-size: 22px;
+ 	}
+ 	
+ 	.button-choice{
+		position: absolute; 
+		top:35%; 
+		width: 50%;
+	}
+	.grand-title{
+		font-size: 2rem;
+	}
+	.description{
+ 		font-size: 20px;
+ 	}
+
+  }
+  @media all and (max-width: 500px){
+  	.button{
+ 		font-size: 10px;
+ 	}}
